# pyramid-debugtoolbar-structlog

./: .editorconfig  .flake8  .pre-commit-config.yaml  LICENSE  README.rst  pyproject.toml  tox.ini
.github/workflows/: tests.yml
demo/: demo.py  home.mako
src/pyramid_debugtoolbar_structlog/: __init__.py
src/pyramid_debugtoolbar_structlog/panels/: structlog_.py
src/pyramid_debugtoolbar_structlog/panels/templates/: structlog.dbtmako
tests/: test_panel.py  test_processor.py
